src/styles/components/form/input.css
.input--text {
  @apply space-y-1;

  .input-field {
    @apply flex items-stretch rounded border border-grey-400 bg-white;

    &:has(input:focus-visible, textarea:focus-visible) {
      @apply ring-2 ring-green-500 ring-offset-1;
      outline: none;
    }

    > :first-child {
      @apply rounded-l;
    }

    > :last-child {
      @apply rounded-r;
    }

    &[data-validation="success"],
    &:has(:user-valid:not(:placeholder-shown)) {
      @apply border-green-500;

      input:not([type="checkbox"]):not([type="radio"]) {
        background: url("@assets/svg/icons/validation-success.svg") no-repeat;
        background-size: 0.75rem;
        background-position: center right 1rem;
      }
    }

    &[data-validation="error"],
    &:has(:user-invalid) {
      @apply border-red-500;

      input:not([type="checkbox"]):not([type="radio"]) {
        @apply text-red-500;

        background: url("@assets/svg/icons/validation-error.svg") no-repeat;
        background-size: 0.625rem;
        background-position: center right 1rem;
      }
    }

    .input-field__before {
      @apply flex items-center pl-3 pr-4;

      + input {
        @apply pl-0;
      }
    }

    .input-field__after {
      @apply -ml-3 flex items-center px-4;
    }
  }

  input:not([type="checkbox"]):not([type="radio"]),
  textarea {
    @apply w-full py-2.5 pl-4 pr-10 text-base leading-none text-blue-900 placeholder:text-grey-400 focus:outline-none;

    &:user-invalid {
      @apply text-red-500;

      background: url("@assets/svg/icons/validation-error.svg") no-repeat;
      background-size: 0.625rem;
      background-position: center right 1rem;
    }

    &:user-valid {
      background: url("@assets/svg/icons/validation-success.svg") no-repeat;
      background-size: 0.75rem;
      background-position: center right 1rem;
    }
  }
}

